Initialize calendar project with dependencies
Added .gitignore, README.md, and package files for the calendar project. Updated index.html with Google API credentials and included http-server as a dependency.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -20,8 +20,8 @@
       /* exported handleSignoutClick */
 
       // TODO(developer): Set to client ID and API key from the Developer Console
-      const CLIENT_ID = '<YOUR_CLIENT_ID>';
-      const API_KEY = '<YOUR_API_KEY>';
+      const CLIENT_ID = '660599213368-7nf7b617v1us5af05c8h8ta9fesuk0pe.apps.googleusercontent.com';
+      const API_KEY = 'AIzaSyD-nlxG7-7ZoQthWS17fO19W62lRINQTr4';
 
       // Discovery doc URL for APIs used by the quickstart
       const DISCOVERY_DOC = 'https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest';
